fix too large colored divider issue

--- a/website/src/App.scss
+++ b/website/src/App.scss
@@ -42,7 +42,7 @@ button{
 }
 .divider-colored{
   border-bottom: 10px solid $GOLD;
-  width: 500px;
+  width: 50px;
   margin-bottom: 50px;
 }
 .divider-white{
